src/argocd/bootstrap-resources/frigate/cam05/services.yml
apiVersion: v1
kind: Service
metadata:
  name: frigate-cam05
  labels:
    ryanb.tv/app: frigate
spec:
  selector:
    app.kubernetes.io/name: frigate-cam05
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: http
