src/argocd/bootstrap-resources/frigate/cam05/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-cam05
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cam05.ryanb.tv`)
      kind: Rule
      services:
        - name: frigate-cam05
          kind: Service
          port: http
  tls: {}
